# Practice

./: .gitignore  CMakeLists.txt  hashmap.cpp  list.cpp  queue.cpp  stack.cpp  test.cpp
algorithms/: cluster_graph.h  dijkstra.cpp  dijkstra.h  kruskal.h  order_statistic.h  sorting.cpp  sorting.h  union_find.cpp  union_find.h
datastructures/: avl.cpp  avl.h  binary_index_tree.cpp  binary_index_tree.h  binomial_heap.h  dynamic_heap.cpp  dynamic_heap.h  hashmap.h  heap.cpp  heap.h  linklist.cpp  linklist.h  queue.cpp  queue.h  segmented_tree.cpp  segmented_tree.h  stack.h
problems/: problem1.h  problem2.h  problem3.h  problem4.h  problem5.h  problem6.h
tests/: avl.cpp  binary_index_tree.cpp  binomial_heap.cpp  dijkstra.cpp  dynamic_heap.cpp  hashmap.cpp  heap.cpp  kruskal.cpp  linklist.cpp  order_statistic.cpp  queue.cpp  segmented_tree.cpp  sorting.cpp  stack.cpp  union_find.cpp
tests/algorithms/: cluster_graph.cpp  dijkstra.cpp  kruskal.cpp  order_statistic.cpp  sorting.cpp  union_find.cpp
tests/datastructures/: avl.cpp  binary_index_tree.cpp  binomial_heap.cpp  dynamic_heap.cpp  hashmap.cpp  heap.cpp  linklist.cpp  queue.cpp  segmented_tree.cpp  stack.cpp
tests/inputs/: cluster_graph_small
tests/problems/: problem1.cpp  problem2.cpp  problem3.cpp  problem4.cpp  problem5.cpp  problem6.cpp
