cmake_minimum_required(VERSION 3.13)
project(Practice)

set(CMAKE_CXX_STANDARD 14)

add_executable(linklist datastructures/linklist.cpp)
add_executable(stack datastructures/stack.cpp)
add_executable(queue datastructures/queue.cpp)
add_executable(hashamp datastructures/hashmap.cpp)
add_executable(heap datastructures/heap.cpp)
add_executable(avl datastructures/avl.cpp datastructures/dynamic_heap.cpp)
add_executable(segmented_tree datastructures/segmented_tree.cpp)
add_executable(binary_index_tree datastructures/binary_index_tree.cpp)
add_executable(sorting algorithms/sorting.cpp)
add_executable(dynamic_heap datastructures/dynamic_heap.cpp)
